--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/storage": "^6.6.8-storage-browser.cf3aed2.0",
     "@aws-amplify/ui-react-storage": "^0.0.0-storage-browser-c6f556e-20241001234920",
     "aws-amplify": "^6.6.3-storage-browser.cf3aed2.0",
     "next": "14.2.14",
@@ -16,6 +17,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.3.1",
+    "@aws-amplify/backend-cli": "^1.2.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
